# ksp

./: Cargo.toml  Readme.md  ksp.graphql
base/: Cargo.toml
base/sql/: create_tables.sql  insert_inline_link.sql  insert_reference_link.sql  insert_resource.sql  insert_tag.sql  migrate_tables.sql  select_links_by_referrer.sql  select_links_by_target.sql  select_resource_by_url.sql  select_tags_by_name.sql  select_tags_by_target.sql
base/src/: data.rs  index.rs  insert_inline_link.sql  lib.rs  links_by_referrer.sql  links_by_target.sql  loader.rs  main.rs  schema.rs  server.rs  service.rs  state.rs  store.rs
daemon/: Cargo.toml
daemon/src/: insert_reference_link.sql  main.rs  store.rs
program/: Cargo.toml
program/src/: main.rs
scanner/: Cargo.toml
scanner/src/: frontmatter.rs  lib.rs  main.rs  markdown.rs  resource.rs  scanner.rs
src/: create.sql  data.rs  data_store.rs  init_tables.sql  insert_tag.sql  main.rs  schema.rs  tags_by_target.sql  test_inesrt.sql
syntax/: Cargo.toml
syntax/src/: lib.rs
