[package]
name = "knowledge-server"
version = "0.1.0"
description = "Knowledge Server"
authors = ["Irakli Gozalishvili <contact@gozala.io>"]
edition = "2018"

[dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
knowledge-server-scanner={path="../scanner"}
knowledge-server-base={path="../base"}
dirs = "2.0.2"
commander-rust = "1.2.1"
syntax={path="../syntax"}